--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -38,12 +38,12 @@ jobs:
         name: Build Docs
         run: mvn -B clean package
 
-      - id: create-gh-pages-artifact
-        name: Create GitHub Pages Artifact
-        if: github.event_name == 'workflow_dispatch' || github.event_name == 'push'
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: target/generated-docs
+      # - id: create-gh-pages-artifact
+      #   name: Create GitHub Pages Artifact
+      #   if: github.event_name == 'workflow_dispatch' || github.event_name == 'push'
+      #   uses: actions/upload-pages-artifact@v1
+      #   with:
+      #     path: target/generated-docs
 
   deploy:
     name: Deploy to GitHub Pages
@@ -66,4 +66,4 @@ jobs:
         name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
 
-        
+
